# by-book

./: Cargo.toml
apps/tauri-app/: APP_DATA_STRUCTURE.md  novel_test.txt  package.json  pnpm-lock.yaml  test.txt  test_novel.txt  三体.txt  测试长书名显示效果.txt
apps/tauri-app/src/: App.css  App.tsx
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/capabilities/: default.json
apps/tauri-app/src-tauri/src/: lib.rs  main.rs
apps/tauri-app/src/components/: BookCover.tsx  Bookshelf.tsx  DataStructureInfo.tsx  Reader.tsx
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/apps/tauri-app/: index.html
frontend/apps/tauri-app/src-tauri/: Cargo.toml
frontend/apps/tauri-app/src-tauri/crates/epub/: Cargo.toml
frontend/apps/tauri-app/src-tauri/crates/epub/src/: lib.rs
rust/crates/typesetting-engine/: Cargo.toml
rust/crates/typesetting-engine/src/: async_ops.rs  document.rs  document_test.rs  file_loader.rs  layout.rs  layout_test.rs  lib.rs  lib.rs.bak  main.rs  parser.rs  parser_test.rs
rust/crates/typesetting-engine/tests/: chinese_novel_test.rs  content_types_test.rs  edge_cases_test.rs  file_format_test.rs  file_loader_test.rs  integration_test.rs  pagination_test.rs  performance_test.rs  xuanjian_xianzu_test.rs
rust/crates/typesettings-engine/tests/: pagination_test.rs
server/core/typesetting-engine/: .gitignore  Cargo.toml  TODO.md
server/core/typesetting-engine/src/: layout_test.rs  main.rs  parser.rs  renderer.rs  renderer_test.rs
