[package]
name = "typesetting-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[[bin]]
name = "typesetting-engine"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]