[package]
name = "typesetting-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.2"